--- a/src/App.css
+++ b/src/App.css
@@ -14,12 +14,44 @@
   color: white;
 }
 
+.dashed-line-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 2rem;
+}
+
+.dashed-line {
+  left: 50%;
+  transform: translateX(-50%);
+  height: 4rem;
+  width: 2px;
+  background-image: repeating-linear-gradient(180deg, #61dafb, #61dafb 5px, transparent 5px, transparent 10px);
+}
+
+.name {
+  font-size: calc(10px + 4vmin);
+  font-weight: bold;
+  margin-bottom: 2rem;
+}
+
 .roadmap {
   position: relative;
   padding: 2rem 0;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.roadmap::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 2px;
+  height: calc(100% + 3vmin); 
+  background-color: #61dafb;
 }
 
 .milestone {
@@ -34,12 +66,13 @@
 .milestone:not(:last-child)::after {
   content: "";
   position: absolute;
-  top: 100%; /* position it at the bottom of the div */
+  top: 100%; 
   left: 50%;
   transform: translateX(-50%);
   width: 2px;
   height: 4rem;
-  background-color: #61dafb; /* you can choose any color */
+  background-color: #61dafb; 
 }
 
-/* ... keep your existing styles ... */
+
+
