--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,15 @@
 .App {
   text-align: center;
   font-family: 'Balsamiq Sans', cursive;
+  min-height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-.App-header {
-  background-color: #282c34;
-  padding: 2rem 0;
-  font-size: calc(6px + 1vmin);
-  color: white;
+html, body, #root {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background-color:rgb(249 250 251);
 }
 
 .dashed-line-section {
@@ -73,6 +70,3 @@
   height: 4rem;
   background-color: #61dafb; 
 }
-
-
-
