--- a/src/App.css
+++ b/src/App.css
@@ -1,62 +1,85 @@
-  .App {
-    text-align: center;
-    font-family: 'Balsamiq Sans', cursive;
-    min-height: 100%;
-    position: relative;
-  }
+.App {
+  text-align: center;
+  font-family: 'Balsamiq Sans', cursive;
+  min-height: 100%;
+  position: relative;
+  overflow: hidden;
+}
 
-  html,
-  body,
-  #root {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    background-color: rgb(249 250 251);
-  }
+html,
+body,
+#root {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: rgb(249 250 251);
+}
 
-  .name-container {
-    position: relative;
-    padding-top: 2rem;
-    text-align: center;
-  }
+.name {
+  font-size: 35px;
+  margin: 0;
+}
 
-  .dotted-line {
-    margin-bottom: 1rem;
-  }
+.roadmap {
+  position: relative;
+  padding: 2rem 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
+}
 
-  .name {
-    font-size: calc(6px + 2.5vmin);
-    margin-bottom: 2rem;
-  }
+.milestone {
+  width: 100px;
+  height: 50px;
+  background-color: rgb(255, 255, 0);
+  border: 2.7px solid rgb(0, 0, 0);
+  border-radius: 2px;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  position: absolute;
+  z-index: 1;
+  top: 15%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
-  .roadmap {
-    position: relative;
-    padding: 6rem 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    overflow: hidden;
-  }
 
-  .roadmap-line {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-  }
 
-  .milestone {
-    position: relative;
-    width: calc(20px + 10vw);
-    height: calc(8px + 5vw);
-    background-color: rgb(255, 255, 0);
-    border-radius: 2px;
-    border-color: rgb(0, 0, 0);
-    border-width: 2.7px;
-    border-style: solid;
-    margin: 2rem 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 1.5vw);
-  }
+/* Vertical line (svg1) */
+.svg1-vertical-line {
+  position: absolute;
+  top: 6%;               /* Start from the top of the roadmap */
+  left: 0;
+  transform: translateY(0%); /* No need to transform in the Y direction */
+  width: 100%;
+  height: 9%;          /* Extend to 50% to make it reach the center of the roadmap */
+  overflow: visible;
+}
+
+
+
+/* Horizontal line (svg2) */
+.svg2-horizontal-line {
+  position: absolute;
+  top: 15%;
+  left: 0;
+  transform: translateY(-50%);
+  width: 100%;
+  height: 50%;
+  overflow: visible;
+}
+
+/* Left vertical line (svg3) */
+.svg3-left-vertical-line {
+  position: absolute;
+  top: 15%;
+  left: 0;
+  transform: translateY(0%);
+  width: 50%;
+  height: 75%; /* Legnth */
+  overflow: visible;
+}
