--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@ body,
   overflow: hidden;
 }
 
-.milestone {
+.milestone1 {
   width: 100px;
   height: 50px;
   background-color: rgb(255, 255, 0);
@@ -44,6 +44,24 @@ body,
   z-index: 1;
   top: 15%;
   left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.milestone2 {
+  width: 100px;
+  height: 50px;
+  background-color: rgb(255, 255, 0);
+  border: 2.7px solid rgb(0, 0, 0);
+  border-radius: 2px;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  position: absolute;
+  z-index: 1;
+  top: 35%;
+  left: 10%;
   transform: translate(-50%, -50%);
 }
 
