--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@ body,
 
 .milestone1 {
   width: 100px;
-  height: 50px;
+  height: 30px;
   background-color: rgb(255, 255, 0);
   border: 2.7px solid rgb(0, 0, 0);
   border-radius: 2px;
@@ -49,7 +49,7 @@ body,
 
 .milestone2 {
   width: 100px;
-  height: 50px;
+  height: 30px;
   background-color: rgb(255, 255, 0);
   border: 2.7px solid rgb(0, 0, 0);
   border-radius: 2px;
@@ -65,22 +65,70 @@ body,
   transform: translate(-50%, -50%);
 }
 
+.milestone3 {
+  width: 130px;
+  height: 30px;
+  background-color: rgb(255, 255, 0);
+  border: 2.7px solid rgb(0, 0, 0);
+  border-radius: 2px;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  position: absolute;
+  z-index: 1;
+  top: 52.5%;
+  left: 70%;
+  transform: translate(-50%, -50%);
+}
 
+.milestone4 {
+  width: 130px;
+  height: 30px;
+  background-color: rgb(255, 255, 0);
+  border: 2.7px solid rgb(0, 0, 0);
+  border-radius: 2px;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  position: absolute;
+  z-index: 1;
+  top: 73%;
+  left: 87.5%;
+  transform: translate(-50%, -50%);
+}
 
-/* Vertical line (svg1) */
+.milestone5 {
+  width: 130px;
+  height: 30px;
+  background-color: rgb(255, 255, 0);
+  border: 2.7px solid rgb(0, 0, 0);
+  border-radius: 2px;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  position: absolute;
+  z-index: 1;
+  top: 82.5%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .svg1-vertical-line {
   position: absolute;
-  top: 6%;               /* Start from the top of the roadmap */
+  top: 6%;               
   left: 0;
-  transform: translateY(0%); /* No need to transform in the Y direction */
+  transform: translateY(0%); 
   width: 100%;
-  height: 9%;          /* Extend to 50% to make it reach the center of the roadmap */
+  height: 9%;          
   overflow: visible;
 }
 
-
-
-/* Horizontal line (svg2) */
 .svg2-horizontal-line {
   position: absolute;
   top: 15%;
@@ -91,7 +139,6 @@ body,
   overflow: visible;
 }
 
-/* Left vertical line (svg3) */
 .svg3-left-vertical-line {
   position: absolute;
   top: 15%;
@@ -99,5 +146,45 @@ body,
   transform: translateY(0%);
   width: 50%;
   height: 75%; /* Legnth */
+  overflow: visible;
+}
+
+.svg4-horizontal-line {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  width: 175%;
+  height: 50%;
+  overflow: visible;
+}
+
+.svg5-vertical-line {
+  position: absolute;
+  top: 52.5%;
+  left: 0;
+  transform: translateY(0%);
+  width: 100%;
+  height: 60%;         
+  overflow: visible;
+}
+
+.svg6-horizontal-line {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  width: 175%;
+  height: 50%;
+  overflow: visible;
+}
+
+.svg7-vertical-line {
+  position: absolute;
+  top: 70%;
+  left: 0;
+  transform: translateY(0%);
+  width: 100%;
+  height: 20%;         
   overflow: visible;
 }
