--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@ body,
 }
 
 .milestone1 {
-  width: 100px;
+  width: 120px;
   height: 30px;
   background-color: rgb(255, 255, 0);
   border: 2.7px solid rgb(0, 0, 0);
@@ -79,11 +79,29 @@ body,
   position: absolute;
   z-index: 1;
   top: 52.5%;
-  left: 70%;
+  left: 35%;
   transform: translate(-50%, -50%);
 }
 
 .milestone4 {
+  width: 130px;
+  height: 30px;
+  background-color: rgb(255, 255, 0);
+  border: 2.7px solid rgb(0, 0, 0);
+  border-radius: 2px;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  position: absolute;
+  z-index: 1;
+  top: 52.5%;
+  left: 70%;
+  transform: translate(-50%, -50%);
+}
+
+.milestone5 {
   width: 130px;
   height: 30px;
   background-color: rgb(255, 255, 0);
@@ -101,7 +119,7 @@ body,
   transform: translate(-50%, -50%);
 }
 
-.milestone5 {
+.milestone6 {
   width: 130px;
   height: 30px;
   background-color: rgb(255, 255, 0);
@@ -119,7 +137,7 @@ body,
   transform: translate(-50%, -50%);
 }
 
-.svg1-vertical-line {
+.vLine1 {
   position: absolute;
   top: 6%;               
   left: 0;
@@ -129,7 +147,7 @@ body,
   overflow: visible;
 }
 
-.svg2-horizontal-line {
+.hLine2 {
   position: absolute;
   top: 15%;
   left: 0;
@@ -139,17 +157,17 @@ body,
   overflow: visible;
 }
 
-.svg3-left-vertical-line {
+.vLine3 {
   position: absolute;
   top: 15%;
   left: 0;
   transform: translateY(0%);
   width: 50%;
-  height: 75%; /* Legnth */
+  height: 75%;
   overflow: visible;
 }
 
-.svg4-horizontal-line {
+.hLine4 {
   position: absolute;
   top: 50%;
   left: 0;
@@ -159,7 +177,7 @@ body,
   overflow: visible;
 }
 
-.svg5-vertical-line {
+.vLine5 {
   position: absolute;
   top: 52.5%;
   left: 0;
@@ -169,7 +187,7 @@ body,
   overflow: visible;
 }
 
-.svg6-horizontal-line {
+.hLine6 {
   position: absolute;
   top: 50%;
   left: 0;
@@ -179,12 +197,232 @@ body,
   overflow: visible;
 }
 
-.svg7-vertical-line {
+.vLine7 {
   position: absolute;
   top: 70%;
   left: 0;
   transform: translateY(0%);
   width: 100%;
   height: 20%;         
+  overflow: visible;
+}
+
+.language1 {
+  width: 115px;
+  height: 30px;
+  background-color: rgb(255, 229, 153);
+  border: 2.7px solid rgb(0, 0, 0);
+  border-radius: 2px;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  position: absolute;
+  z-index: 1;
+  top: 15%;
+  left: 75%;
+  transform: translate(-50%, -50%);
+}
+
+.language2 {
+  width: 115px;
+  height: 30px;
+  background-color: rgb(255, 229, 153);
+  border: 2.7px solid rgb(0, 0, 0);
+  border-radius: 2px;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  position: absolute;
+  z-index: 1;
+  top: 20%;
+  left: 75%;
+  transform: translate(-50%, -50%);
+}
+
+.language3 {
+  width: 115px;
+  height: 30px;
+  background-color: rgb(255, 229, 153);
+  border: 2.7px solid rgb(0, 0, 0);
+  border-radius: 2px;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  position: absolute;
+  z-index: 1;
+  top: 25%;
+  left: 75%;
+  transform: translate(-50%, -50%);
+}
+
+.language4 {
+  width: 115px;
+  height: 30px;
+  background-color: rgb(255, 229, 153);
+  border: 2.7px solid rgb(0, 0, 0);
+  border-radius: 2px;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  position: absolute;
+  z-index: 1;
+  top: 30%;
+  left: 75%;
+  transform: translate(-50%, -50%);
+}
+
+.project1 {
+  width: 250px;
+  height: 30px;
+  background-color: rgb(255, 229, 153);
+  border: 2.7px solid rgb(0, 0, 0);
+  border-radius: 2px;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  position: absolute;
+  z-index: 1;
+  top: 25%;
+  left: 35%;
+  transform: translate(-50%, -50%);
+}
+
+.project2 {
+  width: 200px;
+  height: 30px;
+  background-color: rgb(255, 229, 153);
+  border: 2.7px solid rgb(0, 0, 0);
+  border-radius: 2px;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  position: absolute;
+  z-index: 1;
+  top: 30%;
+  left: 35%;
+  transform: translate(-50%, -50%);
+}
+
+.framework1 {
+  width: 115px;
+  height: 30px;
+  background-color: rgb(255, 229, 153);
+  border: 2.7px solid rgb(0, 0, 0);
+  border-radius: 2px;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  position: absolute;
+  z-index: 1;
+  top: 40%;
+  left: 35%;
+  transform: translate(-50%, -50%);
+}
+
+.framework2 {
+  width: 115px;
+  height: 30px;
+  background-color: rgb(255, 229, 153);
+  border: 2.7px solid rgb(0, 0, 0);
+  border-radius: 2px;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  position: absolute;
+  z-index: 1;
+  top: 45%;
+  left: 35%;
+  transform: translate(-50%, -50%);
+}
+
+.infrastructure1 {
+  width: 115px;
+  height: 30px;
+  background-color: rgb(255, 229, 153);
+  border: 2.7px solid rgb(0, 0, 0);
+  border-radius: 2px;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  position: absolute;
+  z-index: 1;
+  top: 40%;
+  left: 70%;
+  transform: translate(-50%, -50%);
+}
+
+.infrastructure2 {
+  width: 115px;
+  height: 30px;
+  background-color: rgb(255, 229, 153);
+  border: 2.7px solid rgb(0, 0, 0);
+  border-radius: 2px;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  position: absolute;
+  z-index: 1;
+  top: 45%;
+  left: 70%;
+  transform: translate(-50%, -50%);
+}
+
+.dotted-line-language {
+  position: absolute;
+  top: 15%;
+  left: 50%;
+  width: auto;
+  height: 100%;
+  overflow: visible;
+  transform: scaleX(1.5);
+}
+
+.dotted-line-project {
+  position: absolute;
+  top: 15%;
+  left: 17%;
+  width: auto;
+  height: 50%;
+  overflow: visible;
+  transform: scaleX(1.4);
+}
+
+.dotted-line-framework {
+  position: absolute;
+  top: 40%;               
+  left: 0;
+  transform: translateY(0%); 
+  width: 100%;
+  height: 13%;          
+  overflow: visible;
+}
+
+.dotted-line-infrastructure {
+  position: absolute;
+  top: 40%;               
+  left: 0;
+  transform: translateY(0%); 
+  width: 100%;
+  height: 13%;          
   overflow: visible;
 }
