--- a/src/App.css
+++ b/src/App.css
@@ -279,6 +279,19 @@ body,
   transform: translate(-50%, -50%);
 }
 
+.detailLink {
+  color: black; 
+  text-decoration: none;
+  font-size: 18px; 
+  display: flex; 
+  align-items: center; 
+  justify-content: center;
+}
+
+.detailLink:hover {
+  text-decoration: underline;
+}
+
 .project1 {
   width: 250px;
   height: 30px;
