--- a/src/App.css
+++ b/src/App.css
@@ -139,11 +139,11 @@ body,
 
 .vLine1 {
   position: absolute;
-  top: 6%;               
+  top: 6%;
   left: 0;
-  transform: translateY(0%); 
+  transform: translateY(0%);
   width: 100%;
-  height: 9%;          
+  height: 9%;
   overflow: visible;
 }
 
@@ -183,7 +183,7 @@ body,
   left: 0;
   transform: translateY(0%);
   width: 100%;
-  height: 60%;         
+  height: 60%;
   overflow: visible;
 }
 
@@ -203,7 +203,7 @@ body,
   left: 0;
   transform: translateY(0%);
   width: 100%;
-  height: 20%;         
+  height: 20%;
   overflow: visible;
 }
 
@@ -280,20 +280,23 @@ body,
 }
 
 .detailLink {
-  color: black; 
+  color: black;
   text-decoration: none;
-  font-size: 18px; 
-  display: flex; 
-  align-items: center; 
+  font-size: 18px;
+  display: flex;
+  align-items: center;
   justify-content: center;
 }
 
-.language1:hover, .language2:hover, .language3:hover, .language4:hover {
+.language1:hover,
+.language2:hover,
+.language3:hover,
+.language4:hover {
   background-color: rgb(243, 201, 80);
 }
 
 .devicon-go-original-wordmark {
-  font-size: 80px; 
+  font-size: 80px;
   width: auto;
   position: absolute;
   top: 10.5%;
@@ -302,7 +305,7 @@ body,
 }
 
 .devicon-cplusplus-plain {
-  font-size: 47px; 
+  font-size: 47px;
   width: auto;
   position: absolute;
   top: 17%;
@@ -311,7 +314,7 @@ body,
 }
 
 .devicon-python-plain {
-  font-size: 47px; 
+  font-size: 47px;
   width: auto;
   position: absolute;
   top: 22.5%;
@@ -320,7 +323,7 @@ body,
 }
 
 .devicon-javascript-plain {
-  font-size: 47px; 
+  font-size: 47px;
   width: auto;
   position: absolute;
   top: 28%;
@@ -364,7 +367,8 @@ body,
   transform: translate(-50%, -50%);
 }
 
-.project1:hover, .project2:hover {
+.project1:hover,
+.project2:hover {
   background-color: rgb(243, 201, 80);
 }
 
@@ -405,7 +409,7 @@ body,
 }
 
 .devicon-react-original {
-  font-size: 55px; 
+  font-size: 55px;
   width: auto;
   position: absolute;
   top: 36%;
@@ -414,7 +418,7 @@ body,
 }
 
 .devicon-angularjs-plain {
-  font-size: 55px; 
+  font-size: 55px;
   width: auto;
   position: absolute;
   top: 43%;
@@ -422,7 +426,8 @@ body,
   transform: translate(90%);
 }
 
-.framework1:hover, .framework2:hover {
+.framework1:hover,
+.framework2:hover {
   background-color: rgb(243, 201, 80);
 }
 
@@ -463,7 +468,7 @@ body,
 }
 
 .devicon-terraform-plain {
-  font-size: 50px; 
+  font-size: 50px;
   width: auto;
   position: absolute;
   top: 37.5%;
@@ -472,7 +477,7 @@ body,
 }
 
 .devicon-amazonwebservices-plain-wordmark {
-  font-size: 110px; 
+  font-size: 110px;
   width: auto;
   position: absolute;
   top: 41%;
@@ -480,7 +485,8 @@ body,
   transform: translate(70%);
 }
 
-.infrastructure1:hover, .infrastructure2:hover {
+.infrastructure1:hover,
+.infrastructure2:hover {
   background-color: rgb(243, 201, 80);
 }
 
@@ -538,7 +544,9 @@ body,
   transform: translate(-50%, -50%);
 }
 
-.cert1:hover, .cert2:hover, .cert3:hover {
+.cert1:hover,
+.cert2:hover,
+.cert3:hover {
   background-color: rgb(243, 201, 80);
 }
 
@@ -614,12 +622,15 @@ body,
   transform: translate(-50%, -50%);
 }
 
-.contact1:hover, .contact2:hover, .contact3:hover, .contact4:hover {
+.contact1:hover,
+.contact2:hover,
+.contact3:hover,
+.contact4:hover {
   background-color: rgb(243, 201, 80);
 }
 
 .devicon-linkedin-plain {
-  font-size: 45px; 
+  font-size: 45px;
   width: auto;
   position: absolute;
   top: 82.5%;
@@ -628,7 +639,7 @@ body,
 }
 
 .devicon-github-original {
-  font-size: 45px; 
+  font-size: 45px;
   width: auto;
   position: absolute;
   top: 87.5%;
@@ -659,21 +670,21 @@ body,
 
 .dotted-line-framework {
   position: absolute;
-  top: 40%;               
+  top: 40%;
   left: 0;
-  transform: translateY(0%); 
+  transform: translateY(0%);
   width: 100%;
-  height: 13%;          
+  height: 13%;
   overflow: visible;
 }
 
 .dotted-line-infrastructure {
   position: absolute;
-  top: 40%;               
+  top: 40%;
   left: 0;
-  transform: translateY(0%); 
+  transform: translateY(0%);
   width: 100%;
-  height: 13%;          
+  height: 13%;
   overflow: visible;
 }
 
@@ -695,4 +706,22 @@ body,
   height: 50%;
   overflow: visible;
   transform: scaleX(1.4);
+}
+
+@media (max-width: 600px) {
+  .App {
+    transform: scale(0.6);
+    transform-origin: center;
+
+    margin-left: -35%;
+    margin-right: -35%;
+    margin-top: -20%;
+  }
+
+  .dotted-line-cert,
+  .dotted-line-contact,
+  .dotted-line-language,
+  .dotted-line-project {
+    display: none;
+  }
 }
