--- a/src/App.css
+++ b/src/App.css
@@ -629,6 +629,25 @@ body,
   background-color: rgb(243, 201, 80);
 }
 
+.summary {
+  width: 300px;
+  height: 100px;
+  background-color: white;
+  border: 2.7px solid rgb(0, 0, 0);
+  border-radius: 2px;
+  margin: 0;
+  display: flex;
+  text-align: left;  /* This will align the text to the left */
+  font-size: 16px;
+  position: absolute;
+  z-index: 1;
+  top: 63.5%;
+  left: 29%;
+  transform: translate(-50%, -50%);
+  padding: 10px;
+}
+
+
 .devicon-linkedin-plain {
   font-size: 45px;
   width: auto;
@@ -708,7 +727,7 @@ body,
   transform: scaleX(1.4);
 }
 
-@media (max-width: 600px) {
+@media (max-width: 650px) {
   .App {
     transform: scale(0.6);
     transform-origin: center;
