--- a/src/App.css
+++ b/src/App.css
@@ -649,7 +649,6 @@ body,
   padding: 10px;
 }
 
-
 .devicon-linkedin-plain {
   font-size: 40px;
   width: auto;
@@ -667,7 +666,6 @@ body,
   left: 13%;
   transform: translate(-70%);
 }
-
 
 .dotted-line-language {
   position: absolute;
@@ -798,6 +796,24 @@ body,
     top: 43%;
     left: 40%;
     transform: translate(90%);
+  }
+
+  .devicon-terraform-plain {
+    font-size: 37px;
+    width: auto;
+    position: absolute;
+    top: 37%;
+    left: 70%;
+    transform: translate(190%);
+  }
+  
+  .devicon-amazonwebservices-plain-wordmark {
+    font-size: 95px;
+    width: auto;
+    position: absolute;
+    top: 40%;
+    left: 71%;
+    transform: translate(70%);
   }
 
   .devicon-linkedin-plain {
