--- a/src/App.css
+++ b/src/App.css
@@ -927,6 +927,23 @@ body,
     transform: translate(-70%);
   }
   
+  .summary {
+    width: 500px;
+    height: 100px;
+    background-color: white;
+    border: 2.7px solid rgb(0, 0, 0);
+    border-radius: 2px;
+    margin: 0;
+    display: flex;
+    text-align: left;
+    font-size: 20px;
+    position: absolute;
+    z-index: 1;
+    top: 63.5%;
+    left: 29%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+  }
 
   .dotted-line-language {
     position: absolute;
